[package]
name = "AndroidMDM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-androidmanagement1 = "5.0.3+20230119"
serde = "1.0.188"
serde_json = "1.0.107"
hyper = "0.14.27"
hyper-rustls = "0.24.1"
tokio = { version = "1.0.0", features = ["full"] }